// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Greeting component > component renders correctly 1`] = `
<button
  className="px-4 border-fuchsia-500 py-2.5 flex justify-center rounded-lg2 font-semibold text-gray-50 bg-rwc-primary1 text-white hover:bg-opacity-95 transition-all duration-300 undefined"
/>
`;

exports[`Greeting component > prop working 1`] = `
<button
  className="px-4 border-fuchsia-500 py-2.5 flex justify-center rounded-lg2 font-semibold text-gray-50 bg-rwc-primary1 text-white hover:bg-opacity-95 transition-all duration-300 undefined"
>
  Universe
</button>
`;
